[package]
name = "mist_client_register"
version = "0.1.0"
authors = ["Eishun Kondoh <shun3382@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
csv = "1.1"
log = "0.4"
pretty_env_logger = "0.3"
prettytable-rs = "^0.8"
reqwest = { version = "0.10.9", features = ["cookies", "json"]}
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
tokio = { version = "0.2", features = ["full"] }
